prevent hover on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,10 +67,6 @@ h1 {
   margin-block-end: 0;
 }
 
-// img {
-//   display: none;
-// }
-
 * {
   scroll-behavior: smooth;
 }
@@ -86,6 +82,13 @@ h1 {
 ::-webkit-scrollbar-thumb {
   background: $light_blue;
   border-radius: 8px;
+}
+
+@media (hover: none) {
+  button:hover {
+    transform: none;
+    background-color: $light_blue;
+  }
 }
 
 @media (min-width: 1921px) {
